Armature and bone selection is broken on macOS #65066

Closed
opened 2019-05-24 11:30:23 +02:00 by Rob van Wees · 17 comments

System Information
Operating system: macOS 10.14.5
Graphics card: Radeon Pro 580X (2019 iMac 27")

Blender Version
Broken: 2.80.72, d21b346f1c
Worked: 2.79

It is not possible

Broken behavior

  • It is not possible to select an armature in Object mode by clicking anywhere on it. It is only possible to select the armature by clicking the root bone.
  • It is not possible to select an individual bone in an armature by clicking on it while in Edit or Pose mode. Only the root bone can be selected.

This happens for armatures appended from a Blender 2.79 file and for newly created armatures.

Workaround
I found two workarounds:

  • The "root" bone can be selected by mouse-click while in Edit or Pose mode. If clicked multiple times, the selection will cycle through each bone. However, not all bones are always selected this way, and there seems to be no fixed order to the cycle.
  • Expanding the outliner to show the bones allows for click-selecting an individual bone.

Both workarounds only work for armatures with few bones, they will not work for large/complex armatures.

Example with failed selection behavior
The atached file contains two armatures, one appended from a 2.79 file, one newly created. Both have the broken selection behavior.

2.80-BoneSelectionBug.blend

**System Information** Operating system: macOS 10.14.5 Graphics card: Radeon Pro 580X (2019 iMac 27") **Blender Version** Broken: 2.80.72, d21b346f1c82 Worked: 2.79 It is not possible **Broken behavior** - It is not possible to select an armature in Object mode by clicking anywhere on it. It is only possible to select the armature by clicking the root bone. - It is not possible to select an individual bone in an armature by clicking on it while in Edit or Pose mode. Only the root bone can be selected. This happens for armatures appended from a Blender 2.79 file and for newly created armatures. **Workaround** I found two workarounds: - The "root" bone can be selected by mouse-click while in Edit or Pose mode. If clicked multiple times, the selection will cycle through each bone. However, not all bones are always selected this way, and there seems to be no fixed order to the cycle. - Expanding the outliner to show the bones allows for click-selecting an individual bone. Both workarounds only work for armatures with few bones, they will not work for large/complex armatures. **Example with failed selection behavior** The atached file contains two armatures, one appended from a 2.79 file, one newly created. Both have the broken selection behavior. [2.80-BoneSelectionBug.blend](https://archive.blender.org/developer/F7065084/2.80-BoneSelectionBug.blend)
Author

Added subscriber: @Robw

Added subscriber: @Robw

#65180 was marked as duplicate of this issue

#65180 was marked as duplicate of this issue
Rob van Wees changed title from Armature and bone selection is broken in Object and Pose modes to Armature and bone selection is broken in Object, Edit and Pose modes 2019-05-24 11:39:21 +02:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I cannot reproduce the issue. I can select them just fine. Which keymap do you use?

I cannot reproduce the issue. I can select them just fine. Which keymap do you use?
Author

Hi @JacquesLucke ,

I used the may 23rd 2.80 macOS build from blender.org and in a compiled-from-source version (2.80.71, rebuild after clean and update from git this morning)

I use "out of the box" Blender keymap. I run into this in the problem with the Blender 2.7x and IC keymaps as well: clicking anywhere except on the root bone won't select the armature or the individual bones.

Disabling all addons (except Cycles) did not help.

It used to work a while back (in 2.80), but I haven't got any older versions I can try with. Is there a way to get an older build from blender.org?

EDIT: I just did a complete rebuild (fresh clone/update from git), reset the settings to factory default. Same behavior.

EDIT 2:

  • I found an older version of blender on my computer. In Blender 2.80 from 2019-05-15 (8a6414ed46) selection of armatures/bones works fine
  • I just tried today's daily build on my macOS 10.13.6 laptop and it has the same behavior: clicking anywhere on the armature but on the root bone won't select.

EDIT 3: the problem does not occur if I set display mode to "wire". It only seems to happen when set to Octahedral, Envelope, Stick and B-bones.

Hi @JacquesLucke , I used the may 23rd 2.80 macOS build from blender.org and in a compiled-from-source version (2.80.71, rebuild after clean and update from git this morning) I use "out of the box" Blender keymap. I run into this in the problem with the Blender 2.7x and IC keymaps as well: clicking anywhere except on the root bone won't select the armature or the individual bones. Disabling all addons (except Cycles) did not help. It used to work a while back (in 2.80), but I haven't got any older versions I can try with. Is there a way to get an older build from blender.org? EDIT: I just did a complete rebuild (fresh clone/update from git), reset the settings to factory default. Same behavior. EDIT 2: - I found an older version of blender on my computer. In Blender 2.80 from 2019-05-15 (8a6414ed46f6) selection of armatures/bones works fine - I just tried today's daily build on my macOS 10.13.6 laptop and it has the same behavior: clicking anywhere on the armature but on the root bone won't select. EDIT 3: the problem does not occur if I set display mode to "wire". It only seems to happen when set to Octahedral, Envelope, Stick and B-bones.

Added subscriber: @ncthbrt

Added subscriber: @ncthbrt

I am also experiencing this bug on the 2019-05-24 Mac OSX beta release with the default 2.8 keymap (and factory settings)

Using the Circular selection tool works, as does setting the bone display mode to wire.

I am also experiencing this bug on the 2019-05-24 Mac OSX beta release with the default 2.8 keymap (and factory settings) Using the Circular selection tool works, as does setting the bone display mode to wire.
Author

Circle select does not seem to work for me. An armature is only selectable by selecting the root bone.

Possibly related: selecting empties has some strange behavior aswell: when dispay mode is set to Cube I can only select an empty when visibility is set to "in front" (the old X-ray) Setting to Arrows works better but is a bit inconsistent, Any other display mode seems fine.

Circle select does not seem to work for me. An armature is only selectable by selecting the root bone. Possibly related: selecting empties has some strange behavior aswell: when dispay mode is set to Cube I can only select an empty when visibility is set to "in front" (the old X-ray) Setting to Arrows works better but is a bit inconsistent, Any other display mode seems fine.
Brecht Van Lommel changed title from Armature and bone selection is broken in Object, Edit and Pose modes to Armature and bone selection is broken on macOS 2019-05-27 12:48:21 +02:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscribers: @fclem, @brecht

Added subscribers: @fclem, @brecht

Caused by 60319e25f2.

Caused by 60319e25f2.

@fclem, any hint on what might be the cause or what to test?

@fclem, any hint on what might be the cause or what to test?

This issue was referenced by 4ad9d93fec

This issue was referenced by 4ad9d93fec776afdd27257a425d33d65d67f240b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

I just did a rebuild today (2.80.72, hash 55814cd31f, macOS Mojave 10.14.5). Selection behavior is better, thanks!

However, while now workable, armature/bone selection behavior is inconsistent with Blender 2.79.

In Blender 2.79, bones and armatures behave as solids for selection, in 2.80, they behave as empties.

  • When in Object mode, Blender displays armatures as outlines of the bones. Selection only works when clicking on or near the outline of an armature/empty/bone. Clicking in the empty space between has the same behavior as clicking on an empty space outside them: all objects are deselected.
  • When in pose mode, bones are shown as solids but they are treated as empty outlines: clicking on a bone between the outlines deselects al selected objects.
I just did a rebuild today (2.80.72, hash 55814cd31ff4, macOS Mojave 10.14.5). Selection behavior is better, thanks! However, while now workable, armature/bone selection behavior is inconsistent with Blender 2.79. In Blender 2.79, bones and armatures behave as solids for selection, in 2.80, they behave as empties. - When in Object mode, Blender displays armatures as outlines of the bones. Selection only works when clicking on or near the outline of an armature/empty/bone. Clicking in the empty space between has the same behavior as clicking on an empty space outside them: all objects are deselected. - When in pose mode, bones are shown as solids but they are treated as empty outlines: clicking on a bone between the outlines deselects al selected objects.

Yes this behavior was to make it easy to select bones inside other bones.

Yes this behavior was to make it easy to select bones inside other bones.
Author

Ah, ok.

I can appreciate that for armatures, but if Blender shows bones as solids in Pose mode, I expect them to behave as solids. Current behavior feels inconsistent.

Ah, ok. I can appreciate that for armatures, but if Blender shows bones as solids in Pose mode, I expect them to behave as solids. Current behavior feels inconsistent.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65066
No description provided.