Fix T65066 Armature and bone selection is broken on macOS